--- a/1_basic_JS/demo_code/frontend/examples_live/1_add_js_to_webpage/index.html
+++ b/1_basic_JS/demo_code/frontend/examples_live/1_add_js_to_webpage/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 mt-5 article bg-white rounded px-5 py-5">
-        <h1 class="mb-3">Title</h1>
+        <h1 class="mb-3">My Article</h1>
       </div>
     </div>
   </div>
