--- a/1_basic_JS/demo_code/frontend/examples_live/5_modules_and_global_namespaces/index.html
+++ b/1_basic_JS/demo_code/frontend/examples_live/5_modules_and_global_namespaces/index.html
@@ -7,11 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-       
-    <link rel="stylesheet" href="./styles.css">
-
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   </head>
 
   <body class="bg-secondary">
@@ -23,25 +19,22 @@
             Some, such as Wylie Dufresne, James Beard Award–winning chef and a father of molecular gastronomy, might say I’m late to this epiphany, like when I called to ask if he’d heard of cheese powder, a dehydrated, concentrated version of the fresh stuff.\n “Can you tell me someone who hasn’t?” he said, broaching the topic of Kraft mac and cheese packets as evidence before I could careen into my Opening Argument (a description of an eye-opening joyride I took on nuts.com after two glasses of wine).\n The cheese powder I purchased at such scale that a midsize cat could use it as a bed and the pulverized, neon flavorings of Kraft are close cousins: variations on a theme, Dufresne explained. The latter may have been laden with more unpronounceable additives and dyes historically, but it is nonetheless a form of powdered cheese.         
           </p>
 
-          <button id="show-hide-button" type="button" class="btn btn-primary">Show/hide comments</button>
+          <button id="load-comments-button" type="button" class="btn btn-primary">Load comments</button>
 
           <hr>
 
           <div class="comments">
             <h2 class="title">Comments</h2>
-            <div class="comment">
-              My husband has told me that my muffins are boring  that I should step up my game while he is stuffing an orange 
-              cranberry muffin in his face so am going to bake some pumpkin cheesecake
-            </div>
-            <hr>
           </div>
 
+          <div class="new-comment">
+            <textarea class="form-control mb-2" id="new-comment-textarea" rows="3"></textarea>
+            <button id="new-comment-publish-button" class="btn btn-primary">Add a comment</button>
+          </div>
         </div>
       </div>
     </div>
 
-
-
-    <script src="./main.js"></script>
   </body>
 </html>
+
